Adding index page

--- a/index.html
+++ b/index.html
@@ -53,6 +53,54 @@
           </nav>
     </header>
 
+    <main>
+        <div class="container">
+            <h3 class="title1">Recentes</h3>
+
+            <div class="row post-container">
+                <div class="col-5  post-container-image">
+                    <a href="#"><img src="assets/images/financeiro.jpg" class="img-thumbnail image-card-post" alt="Imagem notícia"></a>
+                </div>
+                <div class="col-7">
+                    <span class="span-card-post">Autor</span>
+                    <h4><a class="link-card-post" href="#">Título Notícia</a></h4>
+                    <p class="p-card-post">Lorem ipsum dolor sit, amet consectetur
+                         adipisiscing elit.Lorem ipsum dolor sit, amet consectetur
+                         adipisiscing elit. </p>
+                    <button type="button" class=" btn button-card-tag">Categoria</button>
+                    
+                    <p class="span-card-post data-post">04/09/2021</p>
+                </div>
+            </div>
+
+            <div class="row post-container">
+                <div class="col-5  post-container-image">
+                    <a href="#"><img src="assets/images/financeiro.jpg" class="img-thumbnail image-card-post" alt="Imagem notícia"></a>
+                </div>
+                <div class="col-7">
+                    <span class="span-card-post">Autor</span>
+                    <h4><a class="link-card-post" href="#">Título Notícia</a></h4>
+                    <p class="p-card-post">Lorem ipsum dolor sit, amet consectetur
+                         adipisiscing elit.Lorem ipsum dolor sit, amet consectetur
+                         adipisiscing elit. </p>
+                    <button type="button" class=" btn button-card-tag">Categoria</button>
+                    
+                    <p class="span-card-post data-post">04/09/2021</p>
+                </div>
+            </div>
+
+            <div class="text-center div-button-index">
+                <button type="button" class=" btn button-index">Ver mais Posts</button>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div class="footer">
+
+        </div>
+    </footer>
+
     <script src="vendor/jquery/js/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <!--<script src="vendor/bootstrap/js/wow.min.js"></script>-->
