--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
 
     <main>
         <div class="container">
+
+            <div class="row ">
+                <div class="col-8 search-div">
+                    <form method="" action="" class="input-group ">
+                        <input type="text" class="form-control " id="search-input" placeholder="Pesquisar" >
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary " id="search-btn" type="submit"><i class="fas fa-search"></i></button>
+                        </div>
+                    </form>
+                </div>
+
+        
+            </div>
+
             <h3 class="title1">Recentes</h3>
 
             <div class="row post-container">
